# valueset-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NOTICE  QUICKSTART.md  README.md  TESTING.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schema.py
app/routers/: __init__.py  health.py  terms.py  valuesets.py
github_workflows/workflows/: ingest.yml  test.yml
ingestion/: __init__.py  cli.py  csv_loader.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_cli.py  test_ingestion.py  test_models.py
tests/fixtures/: appris.csv
